--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,9 +4,9 @@ Variables
 ======
 */
 :root {
-  --primaryLightColor: #d4e6a5;
-  --primaryColor: #476a2e;
-  --primaryDarkColor: #c02c03;
+  --primaryLightColor: #FABEC0;
+  --primaryColor: #F85C70;
+  --primaryDarkColor: #E43D40;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBackground: #f1f5f8;
@@ -14,7 +14,7 @@ Variables
   --mainBlack: #222;
   --mainGrey: #ececec;
   --darkGrey: #afafaf;
-  --mainRed: #bd0303;
+  --mainRed: #E43D40;
   --mainTransition: all 0.3s linear;
   --mainSpacing: 0.3rem;
   --lightShadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.5);
@@ -280,11 +280,8 @@ Form
   width: var(--smallWidth);
   margin: 0 auto;
   max-width: var(--maxWidth);
-  background: var(--mainWhite);
-  padding: 2rem 2.5rem;
+  padding: 3.5rem 2.5rem;
   text-transform: capitalize;
-  border-radius: var(--mainBorderRadius);
-  box-shadow: var(--lightShadow);
 }
 
 .form-control label {
@@ -298,7 +295,7 @@ Form
   width: 100%;
   border: none;
   border-color: transparent;
-  background: var(--mainBackground);
+  background: var(--mainWhite);
   border-radius: var(--mainBorderRadius);
   padding: 0.5rem;
   font-size: 1.2rem;
